--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       width: 400px;
       height: 400px;
       position: relative; 
-      background-image: url('closed-box.png'); 
+      background-image: url('closedbox.png'); 
       background-size: cover;
       background-position: center;
       transition: transform 0.5s, background-image 0.5s;
